--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: MyBlog
-subtitle: A collection of short software development stories.
-description: A collection of short software development stories
+title: ARUSH GOYAL
 author: Arush Goyal
 author_email: arushgyl@gmail.com
 language: en
