Updating the blog to make it buildable again

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,8 @@
 title: ARUSH GOYAL
 author: Arush Goyal
 author_email: arushgyl@gmail.com
+linkedin_username: arush-goyal-2658b4a3
+github_username: arush0311
 language: en
 timezone: Asia/Kolkata
 
